I have a thing for the number 6 or something?

:)

-------------------------------------------------------------------------------

Wed Jan  5 20:11:40 PST 2000
(KainX)

New version number and copyright dates that include 2000.

-------------------------------------------------------------------------------

Thu Jan  6 11:57:10 GMT 2000
(gilbertt)

Okay. I'm trying to make epplets gnome-session friendly (dunno why =P).

People complain about the automatic respawning, so I have added a configure
option --disable-auto-respawn to prevent epplets remembering to restart
(they still remember location, sticky etc).

*I have not tested this* because I refuse to run gnome-session on this box,
but I see no reason why it shouldn't be ok.

-------------------------------------------------------------------------------

Wed Jan  12 21:37:20 GMT 2000
(gilbertt)

Oops. Fixed a long standing bug in E-Urlwatch. Noone uses the ftp or get
buttons obviously ;)

-------------------------------------------------------------------------------

Fri Jan 14 21:36:41 CST 2000
(thebard)

The beginnings of the OpenGL support is in. Use it, build cool stuff. Mail
me at wmilas@rarcoa.com if something breaks or you want something
implemented

-------------------------------------------------------------------------------

Wed Jan 19 12:32:56 PST 2000
(KainX)

If we run out of images, don't just sit and spin like an idiot.  Tell the user
there's a problem and let them fix it.

-------------------------------------------------------------------------------

Thu Jan 20 08:51:36 CST 2000
(thebard)

Cleaned up more of the Demo code. Tried to track down the case where
Orthogonal projection is getting mapped 2 pixel up and to the right
in the viewport. Cant figure out why its happening. For now im just
adjusting the viewport 2 pixels down and left. Oh, also notice the
pretty colors on teh square. I PROMISE I'll put something more interesting
to look at in in a day or two. :P
